# immersion

./: .gitignore  README.md  bot.py  pyproject.toml  requirements.txt  server.py
gloob/: README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
gloob/app/: globals.css  layout.tsx  page.tsx
gloob/app/api/offer/: route.ts
gloob/app/api/sessions/[sessionId]/offer/: route.ts
gloob/app/api/start/: route.ts
gloob/app/api/stimulus/: route.ts
gloob/app/learn/: page.tsx
src/langlearn_agent/: __init__.py  bot.py  coaching.py  config.py  pipeline.py  prompts.py  runtime.py  server.py
